--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,5 +3,6 @@
 
 $page-header-color: auto;
 $page-header-background-image: none;
+#page-header-background-color: #ccc;
 
 @import "{{ site.theme }}";
