--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 
 .page-header{
-    color: auto;
-    background-color: #ccc;
+    color: #606c71;
+    background-color: #dddddd;
     background-image: none;
 }
