--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,19 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+
     <title>{{ site.title }}</title>
+
     <meta name="description" content="{{ page.description | default: site.description | default: site.github.project_tagline }}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="##1f46b1">
+
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+    <meta property="og:title" content="empymod and emg3d">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://empymod.github.io/">
+    <meta property="og:site_name" content="empymod and emg3d">
+    <meta property="og:image" content="https://empymod.github.io/assets/logo-empymod-plain.png">
+    <meta property="og:description" content="Controlled-source electromagnetic modellers for geophysical exploration purposes">
+
   </head>
   <body>
     <section class="page-header">
-      <h1 class="logo-img"><img src="assets/logo-empymod-plain.png"></h1>
-      <!--h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1-->
-      <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+      <h1>{{ site.description | default: site.github.project_tagline }}</h1>
     </section>
 
     <section class="main-content">
