--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,21 +2,28 @@
 ---
 
 @import "{{ site.theme }}";
-
+@media all and (max-width: 800px) {
+  h1 {
+    font-size: 1.5em !important;
+  }
+}
+@media all and (max-width: 600px) {
+  h1 {
+    font-size: 1em !important;
+  }
+}
 .page-header {
   color: #606c71;
   background-color: #dddddd;
   background-image: none;
-  padding: 3rem 2rem 2rem;
+  padding: 1.5rem 1rem 1rem;
 }
 
-.logo-img {
-  margin: auto;
-  display: block;
-  text-align: center;
-  max-width: 300px;
+ul{
+    list-style-type: none;
+    line-height: 2.4em;
 }
-
-.logo-img img {
-  width: 100%;
+ul li i{
+    margin-right: 10px;
+    margin-left: -40px;
 }
