--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,3 +18,12 @@
   background-image: none;
   padding: 1.5rem 1rem 1rem;
 }
+
+ul{
+    list-style-type: none;
+    line-height: 2.4em;
+}
+ul li i{
+    margin-right: 10px;
+    margin-left: -40px;
+}
