--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://empymod.github.io/">
     <meta property="og:site_name" content="empymod and emg3d">
     <meta property="og:image" content="https://empymod.github.io/assets/logo-empymod-plain.png">
-    <meta property="og:description" content="Controlled-source electromagnetic modellers for geophysical exploration purposes">
+    <meta property="og:description" content="Controlled-Source ElectroMagnetic modellers for Applied Geophysics.">
 
   </head>
   <body>
