--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,10 +20,10 @@
 }
 
 ul{
-    list-style-type: none;
-    line-height: 2.4em;
+  list-style-type: none;
+  line-height: 2.4em;
 }
 ul li i{
-    margin-right: 10px;
-    margin-left: -40px;
+ text-align:center;
+ width:2.2em;
 }
