--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,6 +24,7 @@ ul{
   line-height: 2.4em;
 }
 ul li i{
- text-align:center;
- width:2.2em;
+ text-align: center;
+ width: 2.2em;
+ color: #159957;
 }
