--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,7 +24,8 @@ ul{
   line-height: 2.4em;
 }
 ul li i{
+ margin-left: -2em;
+ width:2.5em;
  text-align: center;
- width: 2.2em;
  color: #159957;
 }
