Adjust og-properties

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,10 @@
 
     <meta property="og:title" content="empymod and emg3d">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://empymod.github.io/">
+    <meta property="og:url" content="https://emsig.github.io/">
     <meta property="og:site_name" content="empymod and emg3d">
-    <meta property="og:image" content="https://empymod.github.io/assets/logo-empymod-plain.png">
-    <meta property="og:description" content="Controlled-Source ElectroMagnetic Modellers for Applied Geophysics.">
+    <meta property="og:image" content="https://emsig.github.io/assets/logo-emsig.png">
+    <meta property="og:description" content="ElectroMagnetic Simulation in Geophysics.">
 
   </head>
   <body>
