--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,11 +15,11 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-    <meta property="og:title" content="empymod and emg3d">
+    <meta property="og:title" content="emsig">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://emsig.github.io/">
-    <meta property="og:site_name" content="empymod and emg3d">
-    <meta property="og:image" content="https://emsig.github.io/assets/logo-emsig.png">
+    <meta property="og:site_name" content="emsig">
+    <meta property="og:image" content="https://emsig.github.io/assets/emsig-logo.png">
     <meta property="og:description" content="ElectroMagnetic Simulation in Geophysics.">
 
   </head>
